vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonOneEmptyCodeElmSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPyo4BEa7KvNEtZ+voWcrtOhCgJyXr3vF0CDbJT73PP4uj+dgX2U4Amr4lLXjXtIP7f105Faq
w6WLS3C3lLVEnR6WDRVTTxC+tDC3IwEc2lkRR66v65FXVxNnn4ZDcxjCnDNkY0kmoXO6GQNDo+vA
NlV3Sly5zc3TRUtWjoAltE6AKaYkUgY8ujlJtbtycopQ8E9D39rOSg245fTygzuWppwr2IGvFxjg
MzIIEzD0v79OsZ23oeD1qMnQYgNCPmqSWkehsUA3mRNhhFUazjL06gBQo9kqSGxZmxygTNvgHlQF
9tPx3/+qQryJJoUZkW2YBcn4INV/UUQM81JlBYq0nYT45Il7QijDGxMO+7/0h6rC0hY4POsHNXKZ
CnZRJw/ve9/1bT4Ic+qfkMh5o8dCYojQOvjpcWHWisD1xhyKCj1V/EANahrUxeX2aPFo6XXJmvuY
HxDU+uDcbCDe4ACr367+nG1iiL2/ucc5FZh11nnPoBNoJboz+2WpulM59hexJ3YDlQEsLqKehHQc
OVyJWm6xunSW7bz2b7h2bDZD+2ZK0W/F31Z+nEuL4oe7YSB3NtagSRsuvJVzWGuXkJYtUuVGgFLz
Luqh3FQneYjN7REZ+L6ukql8VafFs1trhGZzsz35rBziCK+cR44C4zdLwM0dBxK2jFbYgrNG7y5u
O0LFq7fVWX/DBZ6aq4r1g2Q7skWusdJQc5sCpY3DZbgoc3qqmgp7RedGXXlURmDPTsI23mU0tx2p
5C6vbaS7tY4ft9YwBne+97FBoOFNruNog+tpBxOLT/piyAXa8CdfXxjuGMe7Hzk8dir0xvQHdMzs
35A/4VNafstC4Xkg7xlCi/umsui9izNdKlejYhtnzHwDTiWgV1G61Fcq5lv+UeMIWC0HpICnkQVQ
7lPqV9sv2gPUtt9VQiBL4QD5CluQLkrTB6F/tJfLuqpycYvOOVt4H3XOaf6pDtQT8Nwdk4VJDtOQ
vf4xGapiXIQ4Q4q3NgVHd72nbMoJv7xKykT1eQiUMVLoU7D8GAgQ4ZVq0ZVzufKxw+JiaXr3Q/0R
Rjq3YLYJJibmJwEklvzKem92KQu81cEd6upX+P9fGOguYzy5UGRSYjSebiuCO9lFZeIjAy+f9K9t
KxxU/dK0v0X+Lzh7MCwx4Tuxd/od/JN7hn6tXWKoUbM3HRYeynO7EaviWzxgaMhYygXfkmdqXxTC
zfEc+I9CDklMsQVFbJ0/G26CJ0VUw8X1Q8rEOJbo2iX62AhHQRmD0mYbcvZTADe0cb7iuEwCj2FM
Zd4jkZu5CrALl7DGs+p64NH0dfM9RWgl/JCiAfjdrBC3HbeEOtnA5PHPYf/ylXpYHElt8YEMAIuw
q9U5POKt080B2wLEpWJb2CQQD/Y1uBET+UuB9DBpc0gsNvQHSSkwyPMwARNzG2hmgr7c/EexjtPh
H6RltiqXrH6rp3ziWbhcL4gazSzFqxD5kcXHcWYGkeULc9DFusMp2q0xqsycKFV5dwtlxiZAfgIw
Ioxr9f0TmiymlIG/vWrTNXLYbT8QI+CpsGZMi6pr/NjA0F9DtxzA3jkLXkk36jiIWT99eQ3DwWnG
jGucBtAOI+ZrB3Dwauvb5b6SWPZn1XjbV5FCRX90xjtRdMO+5TIh9BLY+/DJ